@@ -25,17 +25,21 @@ Disassembly of section .text:
 0+020 <foo\+(0x|)20> trapx #15
 0+022 <foo\+(0x|)22> movec %cac,%d0
 0+026 <foo\+(0x|)26> movec %cac,%a0
-0+02a <foo\+(0x|)2a> movec %mbb,%d1
-0+02e <foo\+(0x|)2e> movec %mbb,%a1
+0+02a <foo\+(0x|)2a> movec %mbo,%d1
+0+02e <foo\+(0x|)2e> movec %mbo,%a1
 0+032 <foo\+(0x|)32> movec %d2,%cac
 0+036 <foo\+(0x|)36> movec %a2,%cac
-0+03a <foo\+(0x|)3a> movec %d3,%mbb
-0+03e <foo\+(0x|)3e> movec %a3,%mbb
+0+03a <foo\+(0x|)3a> movec %d3,%mbo
+0+03e <foo\+(0x|)3e> movec %a3,%mbo
 0+042 <foo\+(0x|)42> movec %cac,%d4
 0+046 <foo\+(0x|)46> movec %cac,%a4
-0+04a <foo\+(0x|)4a> movec %mbb,%d5
-0+04e <foo\+(0x|)4e> movec %mbb,%a5
+0+04a <foo\+(0x|)4a> movec %mbo,%d5
+0+04e <foo\+(0x|)4e> movec %mbo,%a5
 0+052 <foo\+(0x|)52> movec %d6,%cac
 0+056 <foo\+(0x|)56> movec %fp,%cac
-0+05a <foo\+(0x|)5a> movec %d7,%mbb
-0+05e <foo\+(0x|)5e> movec %sp,%mbb
+0+05a <foo\+(0x|)5a> movec %d7,%mbo
+0+05e <foo\+(0x|)5e> movec %sp,%mbo
+0+062 <foo\+(0x|)62> movec %mbo,%d0
+0+066 <foo\+(0x|)66> movec %mbo,%a0
+0+06a <foo\+(0x|)6a> movec %d1,%mbo
+0+06e <foo\+(0x|)6e> movec %a1,%mbo
