@@ -1,3 +1,7 @@
+2007-09-27  Kazu Hirata  <kazu@codesourcery.com>
+
+	* m68k-dis.c (print_insn_arg): Use %mbo instead of %mbb.
+
 2007-09-26  James E. Wilson  <wilson@specifix.com>
 
 	* ia64-gen.c (print_dependency_table): Fix typo in last patch.
